savePARser.c
#include "llvm/ADT/APFloat.h"
#include "llvm/ADT/Optional.h"
#include "llvm/ADT/STLExtras.h"
#include "llvm/IR/BasicBlock.h"
#include "llvm/IR/Constants.h"
#include "llvm/IR/DerivedTypes.h"
#include "llvm/IR/Function.h"
#include "llvm/IR/IRBuilder.h"
#include "llvm/IR/Instructions.h"
#include "llvm/IR/LLVMContext.h"
#include "llvm/IR/LegacyPassManager.h"
#include "llvm/IR/Module.h"
#include "llvm/IR/Type.h"
#include "llvm/IR/Verifier.h"
#include "llvm/Support/FileSystem.h"
#include "llvm/Support/Host.h"
#include "llvm/Support/TargetRegistry.h"
#include "llvm/Support/TargetSelect.h"
#include "llvm/Support/raw_ostream.h"
#include "llvm/Target/TargetMachine.h"
#include "llvm/Target/TargetOptions.h"
#include <algorithm>
#include <cassert>
#include <cctype>
#include <cstdio>
#include <cstdlib>
#include <iostream>
#include <map>
#include <memory>
#include <queue>
#include <string.h>
#include <string>
#include <system_error>
#include <utility>
#include <vector>

using namespace llvm;
using namespace llvm::sys;

FILE *pFile;

//===----------------------------------------------------------------------===//
// Lexer
//===----------------------------------------------------------------------===//

// The lexer returns one of these for known things.
enum TOKEN_TYPE {

  IDENT = -1,        // [a-zA-Z_][a-zA-Z_0-9]*
  ASSIGN = int('='), // '='

  // delimiters
  LBRA = int('{'),  // left brace
  RBRA = int('}'),  // right brace
  LPAR = int('('),  // left parenthesis
  RPAR = int(')'),  // right parenthesis
  SC = int(';'),    // semicolon
  COMMA = int(','), // comma

  // types
  INT_TOK = -2,   // "int"
  VOID_TOK = -3,  // "void"
  FLOAT_TOK = -4, // "float"
  BOOL_TOK = -5,  // "bool"

  // keywords
  EXTERN = -6,  // "extern"
  IF = -7,      // "if"
  ELSE = -8,    // "else"
  WHILE = -9,   // "while"
  RETURN = -10, // "return"
  // TRUE   = -12,     // "true"
  // FALSE   = -13,     // "false"

  // literals
  INT_LIT = -14,   // [0-9]+
  FLOAT_LIT = -15, // [0-9]+.[0-9]+
  BOOL_LIT = -16,  // "true" or "false" key words

  // logical operators
  AND = -17, // "&&"
  OR = -18,  // "||"

  // operators
  PLUS = int('+'),    // addition or unary plus
  MINUS = int('-'),   // substraction or unary negative
  ASTERIX = int('*'), // multiplication
  DIV = int('/'),     // division
  MOD = int('%'),     // modular
  NOT = int('!'),     // unary negation

  // comparison operators
  EQ = -19,      // equal
  NE = -20,      // not equal
  LE = -21,      // less than or equal to
  LT = int('<'), // less than
  GE = -23,      // greater than or equal to
  GT = int('>'), // greater than




  // special tokens
  EOF_TOK = 0, // signal end of file

  // invalid
  INVALID = -100 // signal invalid token
};

// TOKEN struct is used to keep track of information about a token
struct TOKEN {
  int type = -100;
  std::string lexeme;
  int lineNo;
  int columnNo;
};

static std::string IdentifierStr; // Filled in if IDENT
static int IntVal;                // Filled in if INT_LIT
static bool BoolVal;              // Filled in if BOOL_LIT
static float FloatVal;            // Filled in if FLOAT_LIT
static std::string StringVal;     // Filled in if String Literal
static int lineNo, columnNo;

extern std::string indentation = "";

static TOKEN returnTok(std::string lexVal, int tok_type) {
  TOKEN return_tok;
  return_tok.lexeme = lexVal;
  return_tok.type = tok_type;
  return_tok.lineNo = lineNo;
  return_tok.columnNo = columnNo - lexVal.length() - 1;
  return return_tok;
}

// Read file line by line -- or look for \n and if found add 1 to line number
// and reset column number to 0
/// gettok - Return the next token from standard input.
static TOKEN gettok() {

  static int LastChar = ' ';
  static int NextChar = ' ';

  // Skip any whitespace.
  while (isspace(LastChar)) {
    if (LastChar == '\n' || LastChar == '\r') {
      lineNo++;
      columnNo = 1;
    }
    LastChar = getc(pFile);
    columnNo++;
  }

  if (isalpha(LastChar) ||
      (LastChar == '_')) { // identifier: [a-zA-Z_][a-zA-Z_0-9]*
    IdentifierStr = LastChar;
    columnNo++;

    while (isalnum((LastChar = getc(pFile))) || (LastChar == '_')) {
      IdentifierStr += LastChar;
      columnNo++;
    }

    if (IdentifierStr == "int")
      return returnTok("int", INT_TOK);
    if (IdentifierStr == "bool")
      return returnTok("bool", BOOL_TOK);
    if (IdentifierStr == "float")
      return returnTok("float", FLOAT_TOK);
    if (IdentifierStr == "void")
      return returnTok("void", VOID_TOK);
    if (IdentifierStr == "bool")
      return returnTok("bool", BOOL_TOK);
    if (IdentifierStr == "extern")
      return returnTok("extern", EXTERN);
    if (IdentifierStr == "if")
      return returnTok("if", IF);
    if (IdentifierStr == "else")
      return returnTok("else", ELSE);
    if (IdentifierStr == "while")
      return returnTok("while", WHILE);
    if (IdentifierStr == "return")
      return returnTok("return", RETURN);
    if (IdentifierStr == "true") {
      BoolVal = true;
      return returnTok("true", BOOL_LIT);
    }
    if (IdentifierStr == "false") {
      BoolVal = false;
      return returnTok("false", BOOL_LIT);
    }

    return returnTok(IdentifierStr.c_str(), IDENT);
  }

  if (LastChar == '=') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // EQ: ==
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("==", EQ);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("=", ASSIGN);
    }
  }

  if (LastChar == '{') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("{", LBRA);
  }
  if (LastChar == '}') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("}", RBRA);
  }
  if (LastChar == '(') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("(", LPAR);
  }
  if (LastChar == ')') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(")", RPAR);
  }
  if (LastChar == ';') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(";", SC);
  }
  if (LastChar == ',') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(",", COMMA);
  }

  if (isdigit(LastChar) || LastChar == '.') { // Number: [0-9]+.
    std::string NumStr;

    if (LastChar == '.') { // Floatingpoint Number: .[0-9]+
      do {
        NumStr += LastChar;
        LastChar = getc(pFile);
        columnNo++;
      } while (isdigit(LastChar));

      FloatVal = strtof(NumStr.c_str(), nullptr);
      return returnTok(NumStr, FLOAT_LIT);
    } else {
      do { // Start of Number: [0-9]+
        NumStr += LastChar;
        LastChar = getc(pFile);
        columnNo++;
      } while (isdigit(LastChar));

      if (LastChar == '.') { // Floatingpoint Number: [0-9]+.[0-9]+)
        do {
          NumStr += LastChar;
          LastChar = getc(pFile);
          columnNo++;
        } while (isdigit(LastChar));

        FloatVal = strtof(NumStr.c_str(), nullptr);
        return returnTok(NumStr, FLOAT_LIT);
      } else { // Integer : [0-9]+
        IntVal = strtod(NumStr.c_str(), nullptr);
        return returnTok(NumStr, INT_LIT);
      }
    }
  }

  if (LastChar == '&') {
    NextChar = getc(pFile);
    if (NextChar == '&') { // AND: &&
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("&&", AND);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("&", int('&'));
    }
  }

  if (LastChar == '|') {
    NextChar = getc(pFile);
    if (NextChar == '|') { // OR: ||
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("||", OR);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("|", int('|'));
    }
  }

  if (LastChar == '!') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // NE: !=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("!=", NE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("!", NOT);
      ;
    }
  }

  if (LastChar == '<') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // LE: <=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("<=", LE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("<", LT);
    }
  }

  if (LastChar == '>') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // GE: >=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok(">=", GE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok(">", GT);
    }
  }

  if (LastChar == '/') { // could be division or could be the start of a comment
    LastChar = getc(pFile);
    columnNo++;
    if (LastChar == '/') { // definitely a comment
      do {
        LastChar = getc(pFile);
        columnNo++;
      } while (LastChar != EOF && LastChar != '\n' && LastChar != '\r');

      if (LastChar != EOF)
        return gettok();
    } else
      return returnTok("/", DIV);
  }

  // Check for end of file.  Don't eat the EOF.
  if (LastChar == EOF) {
    columnNo++;
    return returnTok("0", EOF_TOK);
  }

  // Otherwise, just return the character as its ascii value.
  int ThisChar = LastChar;
  std::string s(1, ThisChar);
  LastChar = getc(pFile);
  columnNo++;
  return returnTok(s, int(ThisChar));
}

static std::string boolToString(bool b) {
  if (b) {
    return "true";
  }
  return "false";
}

//===----------------------------------------------------------------------===//
// Parser
//===----------------------------------------------------------------------===//

/// CurTok/getNextToken - Provide a simple token buffer.  CurTok is the current
/// token the parser is looking at.  getNextToken reads another token from the
/// lexer and updates CurTok with its results.
static TOKEN CurTok;
static std::deque<TOKEN> tok_buffer;

static TOKEN getNextToken() {

  if (tok_buffer.size() == 0)
    tok_buffer.push_back(gettok());

  TOKEN temp = tok_buffer.front();
  tok_buffer.pop_front();

  return CurTok = temp;
}

static void putBackToken(TOKEN tok) { tok_buffer.push_front(tok); }

//===----------------------------------------------------------------------===//
// AST nodes
//===----------------------------------------------------------------------===//

/// ASTnode - Base class for all AST nodes.
class ASTnode {
public:
  virtual ~ASTnode() {}
  virtual Value *codegen() = 0;
  virtual std::string to_string() const {};
};

/// IntASTnode - Class for integer literals like 1, 2, 10,
class IntASTnode : public ASTnode {
  int Val;
  TOKEN Tok;
  std::string Name;

public:
  IntASTnode(TOKEN tok, int val) : Val(val), Tok(tok) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"IntegerLiteral 'int', value: "+std::to_string(Val);
    indentation.resize(indentation.size()-3);
    return ret;
    // return std::to_string(Val);
  }
};

class FloatASTnode : public ASTnode {
  float Val;
  TOKEN Tok;
  std::string Name;

public:
  FloatASTnode(TOKEN tok, float val) : Val(val), Tok(tok) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"FloatLiteral 'float', value: "+std::to_string(Val);
    indentation.resize(indentation.size()-3);
    return ret;
    // return std::to_string(Val);
  }
};

class BoolASTnode : public ASTnode {
  bool Val;
  int IntVal;
  TOKEN Tok;
  std::string Name;

public:
  BoolASTnode(TOKEN tok, bool val) : Val(val), IntVal(int(val)), Tok(tok), Name(boolToString(val)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    //return std::to_string(Val);
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"BooleanLiteral 'bool', value: "+Name;
    indentation.resize(indentation.size()-3);
    return ret;

    // return Name;
  }
};

class SemicolASTnode : public ASTnode {
  std::string Semicol;

public:
  SemicolASTnode(TOKEN tok) : Semicol(tok.lexeme.c_str()) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    return "";
    // return Semicol+"\n";
  }
};

class IdentASTnode : public ASTnode {
  TOKEN Tok;
  std::string Name;
public:
  IdentASTnode(TOKEN tok) : Tok(tok), Name(tok.lexeme.c_str()) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"FuncOrVarIdentity 'ident', value: '"+Name+"'";
    indentation.resize(indentation.size()-3);
    return ret;
    // return Name;
  }

  std::string get_id_name() const {
    return Name;
  }
  // const std::string &getName() const {return Name;}
};

class NegativeASTnode : public ASTnode {
  char Op;
  TOKEN Tok;
  std::unique_ptr<ASTnode> Expr;
  std::string Name;

public:
  NegativeASTnode(TOKEN tok, char op, std::unique_ptr<ASTnode> expr) : Op(op), Tok(tok), Expr(std::move(expr)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"NegOfExpression, prefix: '" + std::string(1, Op) +"'"+Expr->to_string().c_str()+std::string(1,')');
    indentation.resize(indentation.size()-3);
    return ret;
    // return std::string(1,'(')+std::string(1, Op)+Expr->to_string().c_str()+std::string(1,')');
  }
};

class ExpressionASTnode : public ASTnode {
  std::string Op;
  std::unique_ptr<ASTnode> LHS;
  std::unique_ptr<ASTnode> RHS;
  std::string Name;

public:
  ExpressionASTnode(TOKEN op, std::unique_ptr<ASTnode> lhs, std::unique_ptr<ASTnode> rhs) : Op(op.lexeme.c_str()), LHS(std::move(lhs)), RHS(std::move(rhs)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"ArithmeticExpr, binary operator: '"+Op+"'";
    indentation = indentation + "   ";
    ret = ret + "\n"+indentation+"├── "+"LeftHandSide of expression: "+LHS->to_string()+"\n"+indentation+"├── "+"RightHandSide of expression: "+RHS->to_string().c_str();
    indentation.resize(indentation.size()-6);
    return ret;
    // return LHS->to_string().c_str()+Op+RHS->to_string().c_str();

  }
};

class ExprEnclosedASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Expr;

public:
  ExprEnclosedASTnode(std::unique_ptr<ASTnode> expr) : Expr(std::move(expr)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"Expression in parantheses: " + Expr->to_string();
    indentation.resize(indentation.size()-3);
    return ret;
    // return std::string(1,'(')+Expr->to_string().c_str()+std::string(1,')');
  }
};

class ExprSemicolASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Expr;
  std::unique_ptr<ASTnode> Semicol;
public:
  ExprSemicolASTnode(std::unique_ptr<ASTnode> expr, std::unique_ptr<ASTnode> semicol) : Expr(std::move(expr)), Semicol(std::move(semicol)) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    return Expr->to_string().c_str();
    // return Expr->to_string().c_str()+std::string(Semicol->to_string().c_str());
  }
};

class AssignASTnode : public ASTnode {
  std::unique_ptr<IdentASTnode> Id;
  std::unique_ptr<ASTnode> Assignment;

public:
  AssignASTnode(std::unique_ptr<IdentASTnode> ident_node, std::unique_ptr<ASTnode> assignment) : Id(std::move(ident_node)), Assignment(std::move(assignment)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"AssignmentExpr, binary operator: '" + std::string(1,'=') + "'";
    indentation = indentation + "   ";
    ret = ret + "\n"+indentation+"├── "+"IdentityOfAssignment: " + Id->to_string().c_str() + "\n"+indentation+"├── "+"Assignment expression:" + Assignment->to_string().c_str();
    indentation.resize(indentation.size()-6);
    return ret;
    // return Id+std::string(1,'=')+Assignment->to_string().c_str();
  }
};

class FunCallASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Id;
  std::vector<std::unique_ptr<ASTnode>> Args;
  std::string Callee;
public:
  FunCallASTnode(std::unique_ptr<ASTnode> ident_node, std::vector<std::unique_ptr<ASTnode>> args, TOKEN tok) : Id(std::move(ident_node)), Args(std::move(args)), Callee(tok.lexeme.c_str()) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"FunctionCall Expression. Function call identity: '" + Id->to_string() + "'";

    if (Args.size()>0) {
      ret = ret + "\n"+indentation+"├── "+"Arguments of function call:";
      indentation = indentation + "   ";
      for (unsigned i=0; i<Args.size(); i++) {
        ret = ret + Args.at(i)->to_string().c_str();
      }
    }
    indentation.resize(indentation.size()-6);

    return ret;
  }
};

class VarTypeASTnode : public ASTnode {
  std::string Type;
public:
  VarTypeASTnode(TOKEN tok) : Type(tok.lexeme.c_str()) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"VarOrFuncType, value: '" + Type + "'";
    indentation.resize(indentation.size()-3);
    return ret;
    // return Type+" ";
  }
  std::string get_var_type() const {
    return Type;
  }
};

class VoidASTnode : public ASTnode {
  std::string Type;
public:
  VoidASTnode(TOKEN tok) : Type(tok.lexeme.c_str()) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"VoidFuncType, value: '" + Type + "'";
    indentation.resize(indentation.size()-3);
    return ret;
    // return Type;
  }
};

class LocalDeclASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Type;
  std::unique_ptr<ASTnode> Id;
  std::unique_ptr<ASTnode> Semicol;
public:
  LocalDeclASTnode(std::unique_ptr<ASTnode> type, std::unique_ptr<ASTnode> ident_node, std::unique_ptr<ASTnode> semicol) : Type(std::move(type)), Id(std::move(ident_node)), Semicol(std::move(semicol)) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"LocalDeclOfVar:"+Type->to_string()+Id->to_string();
    indentation.resize(indentation.size()-3);
    return ret;
    // return Type->to_string().c_str()+Id+std::string(Semicol->to_string().c_str());
  }
};

class BlockASTnode : public ASTnode {
  std::vector<std::unique_ptr<ASTnode>> Decls;
  std::vector<std::unique_ptr<ASTnode>> Stmts;
public:
  BlockASTnode(std::vector<std::unique_ptr<ASTnode>> decls, std::vector<std::unique_ptr<ASTnode>> stmts) : Decls(std::move(decls)), Stmts(std::move(stmts)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    // indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"BlockExpression: ";
    if (Decls.size()>0) {
      indentation = indentation + "   ";
      ret = ret + "\n"+indentation+"├── "+"LocalDeclarations within the block:";
      for (unsigned i=0; i<Decls.size(); i++) {
        ret = ret + std::string(Decls.at(i)->to_string().c_str());
      }
      indentation.resize(indentation.size()-3);
    }
    if (Stmts.size()>0) {
      indentation = indentation + "   ";
      ret = ret + "\n"+indentation+"├── "+"StatementList within the block:";
      for (unsigned i=0; i<Stmts.size(); i++) {
        ret = ret + std::string(Stmts.at(i)->to_string().c_str());
      }
      indentation.resize(indentation.size()-3);
    }
    // indentation.resize(indentation.size()-3);
    return ret;
  }
};

class WhileASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Expr;
  std::unique_ptr<ASTnode> Stmt;
public:
  WhileASTnode(std::unique_ptr<ASTnode> expr, std::unique_ptr<ASTnode> stmt) : Expr(std::move(expr)), Stmt(std::move(stmt)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {

    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"WhileStmt:";
    indentation = indentation + "   ";
    ret = ret + "\n"+indentation+"├── "+"Expression in While Statement:";
    ret = ret + Expr->to_string().c_str();
    ret = ret + "\n"+indentation+"├── "+"StatementsExpr in the While block:";
    ret = ret + Stmt->to_string().c_str();
    indentation.resize(indentation.size()-6);
    // std::string ret = "while (";
    // ret = ret + std::string(Expr->to_string().c_str()) + ")";
    // ret = ret + std::string(Stmt->to_string().c_str());
    return ret;
  }
};

class IfASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Expr;
  std::unique_ptr<ASTnode> Block;
  std::unique_ptr<ASTnode> Else;
public:
  IfASTnode(std::unique_ptr<ASTnode> expr, std::unique_ptr<ASTnode> block, std::unique_ptr<ASTnode> else_stmt) : Expr(std::move(expr)), Block(std::move(block)), Else(std::move(else_stmt)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {

    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"IfStatement:";
    indentation = indentation + "   ";
    ret = ret + "\n"+indentation+"├── "+"If statement expression: " + Expr->to_string() + "\n"+indentation+"├── "+"Block of If statement: " + Block->to_string().c_str();
    if (Else) {
      ret = ret + "\n"+indentation+"├── "+"Else block of If Statement: " + Else->to_string().c_str();
    }
    indentation.resize(indentation.size()-6);
    // std::string ret = "if (";
    // ret = ret + std::string(Expr->to_string().c_str()) + ")";
    // ret = ret + std::string(Block->to_string().c_str());
    // if (Else) {
    //   ret = ret + std::string(Else->to_string().c_str());
    // }
    return ret;
  }
};

class ElseASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Block;
public:
  ElseASTnode(std::unique_ptr<ASTnode> block) : Block(std::move(block)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n"+indentation+"├── "+"ElseBlock of If statement: " + Block->to_string();
    indentation.resize(indentation.size()-3);
    // std::string ret = "else ";
    // ret = ret + std::string(Block->to_string().c_str());
    return ret;
  }
};

class ReturnASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Expr;
  std::unique_ptr<ASTnode> Semicol;
public:
  ReturnASTnode(std::unique_ptr<ASTnode> expr, std::unique_ptr<ASTnode> semicol) : Expr(std::move(expr)), Semicol(std::move(semicol)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n" +indentation+"├── "+"ReturnStatement";
    if (Expr) {
      indentation = indentation + "   ";
      ret = ret + "\n "+indentation +"├── "+"ReturnExpression:" + Expr->to_string().c_str();
      indentation.resize(indentation.size()-3);
    }
    indentation.resize(indentation.size()-3);
    // std::string ret = "return ";
    // if (Expr) {
    //   ret = ret + std::string(Expr->to_string().c_str());
    // }
    // ret = ret + std::string(Semicol->to_string().c_str());
    return ret;
  }
};

class ParamASTnode : public ASTnode {
  std::unique_ptr<VarTypeASTnode> Type;
  std::unique_ptr<IdentASTnode> Id;
public:
  ParamASTnode(std::unique_ptr<VarTypeASTnode> type, std::unique_ptr<IdentASTnode> ident_node) : Type(std::move(type)), Id(std::move(ident_node)) {}
  virtual Value *codegen() override;
  virtual std::string to_string() const override {
    indentation = indentation + "   ";
    std::string ret = "\n" +indentation +"├── "+"Parameter of Function: ";
    if (Type->get_var_type().compare("void")==0) {
      ret = ret + Type->to_string();
    } else {
      ret = ret + Type->to_string() + Id->to_string().c_str();
    }

    indentation.resize(indentation.size()-3);
    return ret;
  }
  std::string get_type() const {
    return Type->get_var_type();
  }
  std::string get_name() const {
    if (!Id) {
      return "";
    }
    return Id->get_id_name();
  }
};

class PrototypeAST {
  std::unique_ptr<VarTypeASTnode> Type;
  std::unique_ptr<IdentASTnode> Id;
  std::vector<std::unique_ptr<ParamASTnode>> Params;
public:
  PrototypeAST(std::unique_ptr<VarTypeASTnode> type, std::unique_ptr<IdentASTnode> id, std::vector<std::unique_ptr<ParamASTnode>> params) : Type(std::move(type)), Id(std::move(id)), Params(std::move(params)) {}
  std::string to_string () const {
    std::string ret = "\n"+indentation+"├── "+"FuncPrototype: " + Type->to_string() + Id->to_string().c_str();
    if (Params.size()>0) {
      indentation = indentation + "   ";
      ret = ret + "\n" + indentation + "├── "+"Parameters:";
      for(unsigned i=0; i<Params.size(); i++) {
        ret = ret + Params.at(i)->to_string().c_str();
      }
      indentation.resize( indentation.size()-3 );
    }
    return ret;
  }
  std::string get_type() const {
    return Type->get_var_type();
  }
  std::string get_name() const {
    return Id->get_id_name();
  }
  Function *codegen();
};

class FunctionAST {
  std::unique_ptr<PrototypeAST> Prototype;
  std::unique_ptr<ASTnode> Body;
public:
  FunctionAST(std::unique_ptr<PrototypeAST> prot, std::unique_ptr<ASTnode> body) : Prototype(std::move(prot)), Body(std::move(body)) {}
  std::string to_string() const {
    std::string ret = "\n"+indentation+"├── "+"Function: ";
    indentation = indentation + "   ";
    ret = ret + Prototype->to_string();
    ret = ret + Body->to_string().c_str();
    indentation.resize( indentation.size()-3 );
    return ret;
  }
  Function *codegen();
};

class ProgramASTnode : public ASTnode {
  std::vector<std::unique_ptr<PrototypeAST>> ExtrnList;
  std::vector<std::unique_ptr<ParamASTnode>> Globals;
  std::vector<std::unique_ptr<FunctionAST>> DeclList;
public:
  ProgramASTnode(std::vector<std::unique_ptr<PrototypeAST>> extrn, std::vector<std::unique_ptr<ParamASTnode>> globals, std::vector<std::unique_ptr<FunctionAST>> decl) : ExtrnList(std::move(extrn)), Globals(std::move(globals)), DeclList(std::move(decl)) {}
  virtual Value *codegen() override {}
  virtual std::string to_string() const override {
    std::string ret;
    if (ExtrnList.size()>0){
      indentation = indentation + "   ";
      ret = ret + "├── "+"ExternFunctions:";
      for(unsigned i=0; i<ExtrnList.size(); i++) {
        ret = ret + ExtrnList.at(i)->to_string().c_str();
      }
      indentation.resize( indentation.size()-3 );
    }
    if (Globals.at(0)) {
      fprintf(stderr, "CIA SEDI\n");
      ret = ret + "\n"+"├── "+"GlobalVarsDeclarations: ";
      for(unsigned i=0; i<Globals.size(); i++) {
        ret = ret + Globals.at(i)->to_string().c_str();
      }
    }
    if (DeclList.size()>0){
      ret = ret + "\n"+"├── "+"FunctionDeclarations: ";
      //indentation = indentation + "   ";
      for(unsigned i=0; i<DeclList.size(); i++) {
        ret = ret+DeclList.at(i)->to_string().c_str();
      }
    }
    return ret;
  }
  void add_global(std::unique_ptr<ParamASTnode> global) {
    Globals.push_back(std::move(global));
  }
};




/* add other AST nodes as nessasary */
